--- a/templates/inettutsTail.vm
+++ b/templates/inettutsTail.vm
@@ -1,5 +1,8 @@
+            </div>
+        </span>
+        <div id="dialog$id">
 
-
+            <div id="modalaaa$id">
             </div>
         	</div>
         	<div id="hasContent" custom:hascontent="false">
