--- a/templates/listMedicineList.vm
+++ b/templates/listMedicineList.vm
@@ -1,15 +1,18 @@
 #if ($medicines)
+#set ($printFirst = 0)
 </p><br/><p>
 	#foreach ($repos in $medicines)
-		#if ($repos.medications)
-			#foreach(  $medicationDetail in $repos.medications )
-			 *
-	   		#if ($medicationDetail.medicationInformation.manufacturedMaterial.freeTextBrandName)
-	  			   ${medicationDetail.medicationInformation.manufacturedMaterial.freeTextBrandName}<br/>
-	  			#elseif ($medicationDetail.narrative)
+		#if ($printFirst == 0)
+			#set ($printFirst = 1)	
+			#if ($repos.medications)
+				#foreach(  $medicationDetail in $repos.medications )
+				 *
+	   			#if ($medicationDetail.medicationInformation.manufacturedMaterial.freeTextBrandName)
+	  				   ${medicationDetail.medicationInformation.manufacturedMaterial.freeTextBrandName}<br/>
+	  				#elseif ($medicationDetail.narrative)
 	  					${medicationDetail.narrative}<br/>
-	  			#end
-		
+	  				#end
+				#end
 	   	#end
 	   #end
 	#end
