--- a/templates/listPatientAllergies.vm
+++ b/templates/listPatientAllergies.vm
@@ -1,5 +1,42 @@
-<a onclick="alert('Method to add a new allergy goes here')" href="#" class="ui-icon ui-icon-circle-plus" style="float: right; margin-left: .3em;"></a>
-#foreach( $allergy in $allergies)
-    <b>$allergy.product.value</b><br/>
-    <span class="ui-icon ui-icon-triangle-1-e"  style="float: left; margin-right: .3em;"></span>Reaction: $allergy.reaction.value<br clear="all"/>
-#end
+#if ($alerts)
+	<a onclick="alert('Method to add a new allergy goes here')" href="#" class="ui-icon ui-icon-circle-plus" style="float: right; margin-left: .3em;"></a>
+
+	<div class="repository-content">
+	#set ($firstRepository = true)
+	#set ($loopCount = 0)
+	#foreach ($repos in $alerts)
+
+			
+		#if ($repos.announce && $firstRepository == true)
+			$repos.announce.message
+			#set ($firstRepository = false)
+			#set ($loopCount = $loopCount + 1)
+		#end
+		#if ($repos.allergies)
+			#if ($firstRepository != true)
+				#if ($loopCount == 1)
+					<div id="collapseInfo$widget_id">
+			
+					<a href="#" class="collapse">More</a>
+					<div style="height: 25px"></div>
+					<div id="add_repos$widget_id" style= "display: none">
+					<p></p>
+				#end
+				<br/>
+				<b><u>Repository: <i>$repos.repository</i></u></b><br/><br/>
+			#end
+			#set ($firstRepository = false)
+			#set ($loopCount = $loopCount + 1)
+			#foreach( $allergy in $repos.allergies)
+		    <b>$allergy.product.value</b><br/>
+    			<span class="ui-icon ui-icon-triangle-1-e"  style="float: left; margin-right: .3em;"></span>Reaction: $allergy.reaction.value<br clear="all"/>
+			#end
+			<br/>
+		#end
+	#end
+	#if ($loopCount >= 2)
+			</div>
+		</div>
+	#end
+	</div>
+#end			
