--- a/templates/listPatientImmunizations.vm
+++ b/templates/listPatientImmunizations.vm
@@ -1,21 +1,62 @@
-#set ($space = " ")    #* This is necessary because velocity removes the spaces between different objects *#
-
+#if ($vaccines)
 <a onclick="alert('Method to add a new immunization goes here')" href="#" class="ui-icon ui-icon-circle-plus" style="float: right; margin-left: .3em;"></a>
-#foreach( $immunization in $immunizations )
-	<b>$immunization.medicationInformation.manufacturedMaterial.freeTextBrandName</b><br/>
-		<span class="ui-icon ui-icon-triangle-1-e"  style="float: left; margin-right: .3em;"></span>Administered by:$space
-		#* Since the given name is an array of an unbounded number of elements, we need to build the given name  *#
-	#if ($immunization.performer.person.name.given)
-		#foreach ($givenNameDetail in $immunization.performer.person.name.given)
-			$givenNameDetail$space 
+
+<div class="repository-content">
+	#set ($firstRepository = true)
+	#set ($loopCount = 0)
+	#foreach ($repos in $vaccines)
+
+			
+		#if ($repos.announce && $firstRepository == true)
+			$repos.announce.message
+			#set ($firstRepository = false)
+			#set ($loopCount = $loopCount + 1)
+		#end
+		#if ($repos.immunizations)
+			#if ($firstRepository != true)
+				#if ($loopCount == 1)
+					<div id="collapseInfo$widget_id">
+			
+					<a href="#" class="collapse">More</a>
+					<div style="height: 25px"></div>
+					<div id="add_repos$widget_id" style= "display: none">
+					<p></p>
+				#end
+				<br/>
+				<b><u>Repository: <i>$repos.repository</i></u></b><br/><br/>
+			#end
+			#set ($firstRepository = false)
+			#set ($loopCount = $loopCount + 1)
+
+
+
+
+
+			#set ($space = " ")    #* This is necessary because velocity removes the spaces between different objects *#
+
+
+			#foreach( $immunization in $repos.immunizations )
+				<b>$immunization.medicationInformation.manufacturedMaterial.freeTextBrandName</b><br/>
+				<span class="ui-icon ui-icon-triangle-1-e"  style="float: left; margin-right: .3em;"></span>Administered by:$space
+				#* Since the given name is an array of an unbounded number of elements, we need to build the given name  *#
+				#if ($immunization.performer.person.name.given)
+					#foreach ($givenNameDetail in $immunization.performer.person.name.given)
+						$givenNameDetail$space 
+					#end
+				#end
+				$immunization.performer.person.name.lastname on${space}
+				$immunization.administeredDate.month/$immunization.administeredDate.day/$immunization.administeredDate.year<br clear="all"/>
+				#set ($comments = $immunization.narrative.split('^'))
+				#foreach($comment in $comments)
+					<span class="ui-icon ui-icon-triangle-1-e"  style="float: left; margin-right: .3em;"></span>$comment<br clear="all"/>
+				#end
+				<br/>
+			#end
 		#end
 	#end
-	$immunization.performer.person.name.lastname on${space}
-	$immunization.administeredDate.month/$immunization.administeredDate.day/$immunization.administeredDate.year<br clear="all"/>
-	#set ($comments = $immunization.narrative.split('^'))
-	#foreach($comment in $comments)
-		<span class="ui-icon ui-icon-triangle-1-e"  style="float: left; margin-right: .3em;"></span>$comment<br clear="all"/>
+	#if ($loopCount >= 2)
+			</div>
+		</div>
 	#end
-	<br/>
+	</div>
 #end
-
