--- a/templates/listProblemList.vm
+++ b/templates/listProblemList.vm
@@ -1,18 +1,22 @@
 <table cellpadding="0" cellspacing="0" border="0" class="display" id="problemListSummary">
 <thead></thead><tbody>
 #if ($problems)
+#set ($printFirst = 0)
 	#foreach ($repos in $problems)
-		#if ($repos.problem)
-			#foreach(  $problemDetail in $repos.problem )
-	   <tr>
-	  	<td> $problemDetail.problemName </td>
-		<td>
-		<div class="ui-corner-all" id="detail">
-			${problemDetail.problemDate.low.month}/${problemDetail.problemDate.low.day}/${problemDetail.problemDate.low.year}
-		</div></td> 
-	   	</tr>
+		#if ($printFirst == 0)
+			#set ($printFirst = 1)	
+			#if ($repos.problem)
+				#foreach(  $problemDetail in $repos.problem )
+	   	<tr>
+	  		<td> $problemDetail.problemName </td>
+			<td>
+			<div class="ui-corner-all" id="detail">
+				${problemDetail.problemDate.low.month}/${problemDetail.problemDate.low.day}/${problemDetail.problemDate.low.year}
+			</div></td> 
+	   		</tr>
+	   		#end
 	   	#end
-	   #end
+		#end
 	#end
 #end
 </tbody>
