--- a/templates/listPatientHistory.vm
+++ b/templates/listPatientHistory.vm
@@ -1,16 +1,25 @@
-<table cellpadding="0" cellspacing="0" border="0" class="display" id="problemListSummary">
-<thead></thead><tbody>
-#if ($patient_history)
-	#foreach(  $history in $patient_history )
-	   <tr>
-	  	#if( $history.color )
-	  		<td style="background-color:$history.color">$history.title
-	  	#else
-			<td>$history.title
-	   	#end
-	   	<div style="display: none;" class="ui-corner-all" id="detail">$history.note</div></td> 
-	   	</tr>
+#if ($medicalHistory)
+#set ($printFirst = 0)
+</p><br><p>
+	#foreach ($repos in $medicalHistory)
+		#if ($printFirst == 0)
+			#set ($printFirst = 1)	
+			<table cellpadding="0" cellspacing="0" border="0" class="display" id="problemListSummary">
+			<thead></thead><tbody>
+			#if ($repos.patient_history)
+				#foreach(  $history in $repos.patient_history )
+	   			<tr>
+	  				#if( $history.color )
+	  					<td style="background-color:$history.color">$history.title
+	  				#else
+						<td>$history.title
+	  			 	#end
+	  			 	<div style="display: none;" class="ui-corner-all" id="detail">$history.note</div></td> 
+	  			 	</tr>
+				#end
+			#end
+			</tbody>
+			<table>
+		#end
 	#end
 #end
-</tbody>
-<table>
