--- a/templates/listPatientHistoryTable.vm
+++ b/templates/listPatientHistoryTable.vm
@@ -1,6 +1,42 @@
-#if ($patient_history)
-	#foreach( $history in $patient_history  )
-		<p class="$history.priority">$history.title<br/>
-		<span class="ui-icon ui-icon-triangle-1-e"  style="float: left; margin-right: .3em;"></span>$history.note<br clear="all"/></p>
+#if ($medicalHistory)
+<a onclick="alert('Method to add medical history goes here')" href="#" class="ui-icon ui-icon-circle-plus" style="float: right; margin-left: .3em;"></a>
+
+<div class="repository-content">
+	#set ($firstRepository = true)
+	#set ($loopCount = 0)
+	#foreach ($repos in $medicalHistory)
+
+			
+		#if ($repos.announce && $firstRepository == true)
+			$repos.announce.message
+			#set ($firstRepository = false)
+			#set ($loopCount = $loopCount + 1)
+		#end
+		#if ($repos.patient_history)
+			#if ($firstRepository != true)
+				#if ($loopCount == 1)
+					<div id="collapseInfo$widget_id">
+			
+					<a href="#" class="collapse">More</a>
+					<div style="height: 25px"></div>
+					<div id="add_repos$widget_id" style= "display: none">
+					<p></p>
+				#end
+				<br/>
+				<b><u>Repository: <i>$repos.repository</i></u></b><br/><br/>
+			#end
+			#set ($firstRepository = false)
+			#set ($loopCount = $loopCount + 1)
+
+			#foreach( $history in $repos.patient_history  )
+				<p class="$history.priority">$history.title<br/>
+				<span class="ui-icon ui-icon-triangle-1-e"  style="float: left; margin-right: .3em;"></span>$history.note<br clear="all"/></p>
+			#end
+		#end
 	#end
-#end
+	#if ($loopCount >= 2)
+			</div>
+		</div>
+	#end
+	</div>
+#end			
