--- a/templates/listPatientAllergies.vm
+++ b/templates/listPatientAllergies.vm
@@ -1,10 +1,10 @@
-#if ($alerts)
+#if ($repositoryList)
 	<a onclick="alert('Method to add a new allergy goes here')" href="#" class="ui-icon ui-icon-circle-plus" style="float: right; margin-left: .3em;"></a>
 
 	<div class="repository-content">
 	#set ($firstRepository = true)
 	#set ($loopCount = 0)
-	#foreach ($repos in $alerts)
+	#foreach ($repos in $repositoryList)
 
 			
 		#if ($repos.announce && $firstRepository == true)
