--- a/templates/listPatientHistory.vm
+++ b/templates/listPatientHistory.vm
@@ -1,7 +1,7 @@
-#if ($medicalHistory)
+#if ($repositoryList)
 #set ($printFirst = 0)
 </p><br><p>
-	#foreach ($repos in $medicalHistory)
+	#foreach ($repos in $repositoryList)
 		#if ($printFirst == 0)
 			#set ($printFirst = 1)	
 			<table cellpadding="0" cellspacing="0" border="0" class="display" id="problemListSummary">
