--- a/templates/listPatientHistoryTable.vm
+++ b/templates/listPatientHistoryTable.vm
@@ -1,10 +1,10 @@
-#if ($medicalHistory)
+#if ($repositoryList)
 <a onclick="alert('Method to add medical history goes here')" href="#" class="ui-icon ui-icon-circle-plus" style="float: right; margin-left: .3em;"></a>
 
 <div class="repository-content">
 	#set ($firstRepository = true)
 	#set ($loopCount = 0)
-	#foreach ($repos in $medicalHistory)
+	#foreach ($repos in $repositoryList)
 
 			
 		#if ($repos.announce && $firstRepository == true)
