Fix bug in listImages template

--- a/templates/listImages.vm
+++ b/templates/listImages.vm
@@ -1,7 +1,7 @@
 #if ($repositoryList)
 	#foreach ($repos in $repositoryList)
 		#if ($repos.images &&  $repos.repository == "local")
-		#* currently the only true source is "local" so only display those
+		#* currently the only true source is "local" so only display those  *#
 			#foreach( $image in $repos.images )
   				<div class="item">
     			#* <a class="item" href="<:prefix:>${image.param}"><img class="content" src="<:prefix:>${image.thumb}"/></a> *#
