--- a/html/css/custom-theme/jquery-ui-1.7.2.custom.css
+++ b/html/css/custom-theme/jquery-ui-1.7.2.custom.css
@@ -288,7 +288,11 @@
 .ui-accordion .ui-accordion-header a { display: block; font-size: 1em; padding: .5em .5em .5em 2.2em; }
 .ui-accordion .ui-accordion-header .ui-icon { position: absolute; left: .5em; top: 50%; margin-top: -8px; }
 .ui-accordion .ui-accordion-content { padding: 1em 2.2em; border-top: 0; margin-top: -2px; position: relative; top: 1px; margin-bottom: 2px; overflow: auto; display: none; }
-.ui-accordion .ui-accordion-content-active { display: block; }/* Datepicker
+.ui-accordion .ui-accordion-content-active { display: block; position: relative; }
+.ui-accordion .ui-accordion-content-inactive{ display: block; position: absolute;
+    left: -10000px;
+ }  /* changed so that datepicker displays properly  */
+ /*Datepicker
 ----------------------------------*/
 .ui-datepicker { width: 17em; padding: .2em .2em 0; }
 .ui-datepicker .ui-datepicker-header { position:relative; padding:.2em 0; }
