Updated to newest jquery and jquery ui for IE functionality in those; image handling in IE still needs fixed.

--- a/templates/listSearchPatientsSelect.vm
+++ b/templates/listSearchPatientsSelect.vm
@@ -3,5 +3,5 @@
 #foreach( $patient in $patients )
     <option value="$patient.id">$patient.first_name $patient.last_name</option>
 #end
-</search>
+</select>
 
