--- a/templates/head.vm
+++ b/templates/head.vm
@@ -1,5 +1,5 @@
 
-<div class="widget" id="yellow-widget$id">
+<div class="widget" id="medCafeWidget-$tab_set$id">
 	<div id = ${name}${rep_patient_id} class = "id">
 
 
