--- a/templates/head.vm
+++ b/templates/head.vm
@@ -1,5 +1,5 @@
 
 <div class="widget" id="medCafeWidget-$tab_set$id">
-	<div id = ${name}${rep_patient_id} class = "id">
+	<div id = ${name}${patient_id} class = "id">
 
 
