--- a/templates/inettutsHead.vm
+++ b/templates/inettutsHead.vm
@@ -1,6 +1,6 @@
 
 <div class="widget color-$color_num" id="medCafeWidget-$tab_set$id">
-<div id = ${name}${rep_patient_id} class = "id">
+<div id = ${name}${patient_id} class = "id">
 
     	<div style="cursor: move;" class="widget-head"> 
         <a href="#" class="collapse">COLLAPSE</a><h3>$label</h3><a href="#" class="remove">CLOSE</a><a href="#" class="edit">EDIT</a><a href="#" class="maximize">MAXIMIZE</a>
