website updates per Gail's comments

--- a/website/html/css/styles.css
+++ b/website/html/css/styles.css
@@ -338,6 +338,6 @@ span.required {
     border solid black 2px;
     width:250px;
     padding: 10px;
-    float:left;
+    float:right;
     margin-right:15px;
 }
