--- a/mobileMeds/res/layout/main.xml
+++ b/mobileMeds/res/layout/main.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-<TextView  
-    android:layout_width="fill_parent" 
-    android:layout_height="wrap_content" 
-    android:text="@string/hello"
-    />
-</LinearLayout>
+<RelativeLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  android:layout_width="match_parent" android:layout_height="match_parent">
+    <TextView  android:layout_alignParentLeft="true" android:layout_width="match_parent" android:layout_alignParentTop="true" android:gravity="center" android:id="@+id/patient_id" android:background="@color/PaleYellow" android:textColor="@color/Black" android:layout_height="26dip"></TextView>
+    <TextView  android:layout_alignParentLeft="true" android:layout_width="match_parent" android:layout_alignParentBottom="true" android:gravity="center" android:id="@+id/repository" android:background="@color/PaleYellow" android:textColor="@color/Black" android:layout_height="26dip"></TextView>
+    <ListView android:layout_width="match_parent" android:layout_alignParentLeft="true" 
+     android:layout_below="@+id/patient_id" android:layout_above="@+id/repository" android:id="@+id/@android:id/list" android:background="@color/White" android:listSelector="@color/PaleYellow" android:layout_height="match_parent" android:dividerHeight="1dip" android:divider="@color/Black"></ListView>
+
+</RelativeLayout>
