--- a/mobileMeds/res/layout/medication.xml
+++ b/mobileMeds/res/layout/medication.xml
@@ -8,7 +8,7 @@
 	
 			<TextView android:layout_width="fill_parent" 
 			 	 android:layout_height="wrap_content" android:id="@+id/medication" android:textSize="14sp" 
-				android:padding="5dp"   android:textColor="@color/Black"/> 
+				android:padding="5dp"   android:textColor="@color/Black" android:textStyle="bold"/> 
 			
 		  <TextView android:layout_width="fill_parent" 
 		 	 android:layout_height="wrap_content" android:id="@+id/effectiveTime" android:textSize="14sp" 
