--- a/templates/inettutsHead.vm
+++ b/templates/inettutsHead.vm
@@ -18,7 +18,7 @@
         </li>
         </ul>
     </div>
-    <div class="widget-content no-copy" id="widget-content$id">
+    <div class="ui-widget-content widget-content no-copy" id="widget-content$id">
         <span>
             <div id="aaa$id" class="no-copy">
 
