--- a/html/css/custom.css
+++ b/html/css/custom.css
@@ -38,7 +38,7 @@
 	 */
 
 	.ui-layout-pane { /* all 'panes' */
-		background: #FFF;
+		/*background: #FFF;*/
 		border: 1px solid #BBB;
 		padding: 10px;
 		overflow: auto;
