--- a/medj/templates/listPatients.vm
+++ b/medj/templates/listPatients.vm
@@ -1,3 +1,3 @@
 #foreach( $patient in $patients )
-    <div id="patient_$patient.id"><a href="ccr/patients/$patient.id">$patient.id</a></div>
-#end   	
+    <div id="patient_$patient.id"><a href="ccr/patients/$patient.id">$patient.id</a> <a href="#" onclick="showMeds('$patient.id')">Show medications</a> <a href="#" onclick="showAlerts('$patient.id')">Show alerts</a></div>
+#end
